# agentmesh

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  Plan.md  README.md  check-backend.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
Features/: AGENTS.md  EVENTS.md  MCP_INTEGRATION.md  MISSION_CONTROL.md  ORCHESTRATION.md
backend/: AGENTS.md  __init__.py  crypto.py
backend/agents/: __init__.py  base.py  pipeline_nodes.py  registry.py
backend/alembic/: env.py
backend/api/: auth_middleware.py  keys.py  middleware.py  routes.py  websocket.py
backend/db/: engine.py  models.py
backend/events/: __init__.py  bus.py  models.py  stream.py
backend/llm/: __init__.py  base.py  catalog.py  gemini.py  groq.py  multi.py  openai_provider.py
backend/mcp/: __init__.py  client.py  registry.py  tools.py
backend/observability/: tcc.py
backend/orchestrator/: __init__.py  graph.py  handoff.py  state.py
backend/pipelines/: templates.py  validator.py
backend/workflows/: __init__.py  demo.py
docs/: API.md  COMPONENTS.md  DESIGN.md  FEATURES.md  IMPLEMENTATION.md  WORKFLOWS.md
frontend/: Dockerfile  auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: hero-1.tsx
frontend/config/: llmProviders.ts
frontend/hooks/: useAgentMeshEvents.ts  useWebSocket.ts
frontend/lib/: demoWorkflows.ts  motion.ts
frontend/public/: llms.txt
frontend/stores/: eventStore.ts  pipelineStore.ts  uiStore.ts
frontend/types/: agents.ts  events.ts  pipeline.ts  workflows.ts
tests/backend/: test_agents.py  test_api.py  test_auth_middleware.py  test_db_models.py  test_events.py  test_golden_path.py  test_llm.py  test_mcp.py  (+5 more)
(+107 files in other folders)
