[project]
name = "agentmesh"
version = "0.1.0"
description = "MCP-Native Multi-Agent Orchestrator with Live Mission Control"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "langgraph>=0.2.0",
    "fastmcp>=1.0.0",
    "google-generativeai>=0.5.0",
    "groq>=0.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
